Fixed about-me visual on smaller devices

--- a/styles.css
+++ b/styles.css
@@ -215,6 +215,10 @@ body{
    .personal-pic {
      width: 80%;
    }
+
+   .connector {
+     display: none;
+   }
  }
 
  /****************
